--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "[![Actions Status](https://github.com/HHelenN/frontend-project-lvl1/workflows/hexlet-check/badge.svg)](https://github.com/HHelenN/frontend-project-lvl1/actions)",
   "main": "index.js",
   "scripts": {
+    "lint:fix": "eslint . --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,15 @@
   "homepage": "https://github.com/HHelenN/frontend-project-lvl1#readme",
   "type": "module",
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "eslint": "^8.23.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
   }
 }
